--- a/blog/templates/blog/month_archive.html
+++ b/blog/templates/blog/month_archive.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load jformat %}
-{block title} آرشیو ماهانه {{ month_name }} در سال {{year}} {endblock title}
+{%block title%} آرشیو ماهانه {{ month_name }} در سال {{year}} {%endblock title%}
 
 {% block content %}
 <h1>پست‌های ماه {{ month_name }}</h1>
