--- a/blog/templates/blog/year_archive.html
+++ b/blog/templates/blog/year_archive.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load jformat %}
-{block title} آرشیو سالانه {{ year }} {endblock title}
+{%block title%} آرشیو سالانه {{ year }} {%endblock title%}
 
 {% block content %}
 <h1>پست‌های سال {{ year }}</h1>
