--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,10 +3,6 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.84.0">
     {% if title %}
     <title> علیرضا فتحی - {% block title %}{% endblock title %}</title>
     {% else %}
@@ -20,13 +16,13 @@
 <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#7952b3">
+{% comment %} <link rel="apple-touch-icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180"> {% endcomment %}
+{% comment %} <link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png"> {% endcomment %}
+{% comment %} <link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png"> {% endcomment %}
+{% comment %} <link rel="manifest" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/manifest.json"> {% endcomment %}
+{% comment %} <link rel="mask-icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3"> {% endcomment %}
+{% comment %} <link rel="icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/favicon.ico"> {% endcomment %}
+{% comment %} <meta name="theme-color" content="#7952b3"> {% endcomment %}
 
 
     <style>
@@ -143,8 +139,8 @@
     <div class="col-md-4">
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
-          <h4 class="fst-italic">درباره</h4>
-          <p class="mb-0">روزنگار شخصی علیرضا فتحی طراح وب جنگو</div>
+          <h4 class="fst-italic">{{ intro.title }}</h4>
+          <p class="mb-0">{{ intro.content | safe }}</div>
 
         <div class="p-4">
           <h4 class="fst-italic">آرشیو</h4>
