--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,11 +1,10 @@
 {% extends 'blog/base.html' %}
 {% load jformat %}
-{%block title%} وبلاگ {%endblock title%}
+{% block title %} وبلاگ {% endblock title %}
 
 {% block content %}
-{% if posts %}
-{% for post in posts %}
+
+{% if post %}
 {% include 'blog/post_section.html' %}
-{% endfor %}
 {% endif %}
 {% endblock content %}
