--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load jformat %}
 <!doctype html>
 <html lang="ar" dir="rtl">
@@ -8,12 +9,11 @@
     {% else %}
     <title> علیرضا فتحی</title>
     {% endif %}
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/blog-rtl/">
 
 
 
     <!-- Bootstrap core CSS -->
-<link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
+<link href="{% static 'blog/bootstrap.rtl.min.css' %}" rel="stylesheet">
 
     <!-- Favicons -->
 {% comment %} <link rel="apple-touch-icon" href="https://getbootstrap.com//docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180"> {% endcomment %}
@@ -45,7 +45,7 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Amiri:wght@400;700&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/5.0/examples/blog/blog.rtl.css" rel="stylesheet">
+    <link type="text/css" href="{% static 'blog/blog.rtl.css' %}" rel="stylesheet">
   </head>
   <body>
 
