--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -53,17 +53,17 @@
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <!-- <a class="link-secondary" href="#">الإشتراك في النشرة البريدية</a> -->
+        <!-- <a class="link-secondary" href="#">اشتراک وبلاگ</a> -->
         <p></p>
       </div>
       <div class="col-4 text-center">
         <a class="blog-header-logo text-dark" href="{% url 'home' %}">علیرضا فتحی</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
-        <!-- <a class="link-secondary" href="#" aria-label="بحث">
+        <!-- <a class="link-secondary" href="#" aria-label="سرچ">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>بحث</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
         </a> -->
-        <!-- <a class="btn btn-sm btn-outline-secondary" href="#">إنشاء حساب</a> -->
+        <!-- <a class="btn btn-sm btn-outline-secondary" href="#">ایجاد حساب</a> -->
         <p></p>
       </div>
     </div>
@@ -129,10 +129,7 @@
 
       {% endblock content %}
 
-      <nav class="blog-pagination" aria-label="Pagination">
-        <a class="btn btn-outline-primary" href="#"> قدیمی‌تر </a>
-        <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true"> جدیدتر </a>
-      </nav>
+      
 
     </div>
 
