--- a/blog/templates/blog/post_section.html
+++ b/blog/templates/blog/post_section.html
@@ -1,7 +1,15 @@
 {% load jformat %}
 
 <article class="blog-post">
-  <h2 class="blog-post-title"><a href="{% url 'post-details' post.slug %}">{{ post.title }}</a></h2>
+  <h2 class="blog-post-title card-title-color"><a href="{% url 'post-details' post.slug %}" class="blog-header-logo text-dark" style="text-decoration:none">{{ post.title }}</a></h2>
+  {% if post.author.first_name %}
   <p class="blog-post-meta"> نوشته شده در تاریخ {{ post.created_at|jformat:"%A %d %B %Y" }} به‌دست <a href="#"> {{ post.author.first_name }} </a></p>
+  {% else %}
+    <p class="blog-post-meta"> نوشته شده در تاریخ {{ post.created_at|jformat:"%A %d %B %Y" }} به‌دست <a href="#"> {{ post.author }} </a></p>
+  {% endif %}
   {{ post.content|safe }}
+        <h6>کامنت‌ها ({{ post.comments.count }})</h6>
+
 </article>
+
+
